<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_ristorantiU"
        android:icon="@drawable/ic_ristoranti"
        android:title="@string/home" />

    <item
        android:id="@+id/ic_profileU"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/ic_logoutU"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>